--- a/Qoute.html
+++ b/Qoute.html
@@ -7,8 +7,8 @@
 </head>
 <body>
     <div class="card">
-        <p id="qoute"><Click to get a qoute</p>
-        <button onclick="generateQoute()">New Qoute</button>
+        <p id="quote"><Click to get a qoute</p>
+        <button onclick="generateQuote()">New Quote</button>
     </body>
     <script src="script.js"></script>
     
