Perubahan kecil pada html

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
 <body>
     <div class="card">
         <p id="quote"><Click to get a qoute</p>
-        <button onclick="generateQuote()">New Qoute</button>
+        <button onclick="generateQuote()">Untuk Anda</button>
     </body>
     <script src="script.js"></script>
 </body>
